--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,3 +1,6 @@
+[env]
+TERM = "xterm-256color"
+
 [window]
 decorations = "None"
 startup_mode = "Maximized"
@@ -17,3 +20,7 @@ builtin_box_drawing = false
 
 [selection]
 save_to_clipboard = true
+
+[keyboard]
+bindings = [{ key = "Q", mods = "Command", action = "None" }, { key = "W", mods = "Command", action = "None" }]
+
