--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -1,3 +1,13 @@
+[language-server.rust-analyzer.config.check]
+command = "clippy"
+
 [[language]]
-name='c'
-indent = { tab-width = 4, unit = '    '}
+name = "python"
+auto-format = true
+formatter = { command = "ruff", args = ["format", "-"] }
+
+
+[[language]]
+name = "xml"
+auto-format = true
+formatter = { command = "xmllint", args = ["--format", "-"] }
