python language server works with uv and replaced zsh z with zoxide

--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -1,6 +1,10 @@
 [language-server.rust-analyzer.config.check]
 command = "clippy"
 
+[language-server.ty]
+command = "ty-wrapper"
+args = ["server"]
+
 [[language]]
 name = "python"
 auto-format = true
